# SS8Assgment

./: README.md
cpp/: CMakeLists.txt
cpp/header/: ChangeDirectory.h  LinuxTerminal.h  ParseCmdLine.h  Terminal.h
cpp/src/: ChangeDirectory.cpp  LinuxTerminal.cpp  ParseCmdLine.cpp  Terminal.cpp  main.cpp
cpp/test/: tests.cpp
